Insisting on JSON URL being defined....